# motion_capture_system

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/motion_capture_system/: KalmanFilter.h  MoCapDriverBase.h
include/motion_capture_system/qualisys/: NBC_Markup.h  Network.cpp  QualisysDriver.h  RTPacket.cpp  RTPacket.h  RTProtocol.h  SFBCWrapper.h  StdString.h
include/motion_capture_system/vicon/: ViconDriver.h
include/motion_capture_system/vicon/vicon_sdk/Linux32/: libboost_filesystem-mt.so.1.51.0  libboost_serialization-mt.so.1.51.0  libboost_wave-mt.so.1.51.0
include/motion_capture_system/vicon/vicon_sdk/Linux64/: libboost_system-mt.so.1.51.0  libboost_thread-mt.so.1.51.0
launch/: qualisys.launch  vicon.launch
mocap_base/: CMakeLists.txt
mocap_base/include/mocap_base/: MoCapDriverBase.h
mocap_base/src/: KalmanFilter.cpp  MoCapDriverBase.cpp
mocap_qualisys/: CMakeLists.txt
mocap_qualisys/include/mocap_qualisys/: NBC_Markup.cpp  Network.cpp  Network.h  QualisysDriver.h  RTPacket.cpp  RTProtocol.cpp  SFBCWrapper.cpp
mocap_qualisys/launch/: comp_qualisys.launch  qualisys.launch
mocap_qualisys/nodes/: synchronize_mocap.py
mocap_qualisys/src/: QualisysDriver.cpp  QualisysDriver.cpp.orig  qualisys.cpp
mocap_vicon/: CMakeLists.txt  package.xml
mocap_vicon/include/mocap_vicon/: ViconDriver.h
mocap_vicon/include/mocap_vicon/vicon_sdk/Linux32/: libboost_chrono-mt.so.1.51.0  libboost_date_time-mt.so.1.51.0  libboost_system-mt.so.1.51.0  libboost_thread-mt.so.1.51.0
mocap_vicon/include/mocap_vicon/vicon_sdk/Linux64/: DataStreamClient.h  libboost_chrono-mt.so.1.51.0
mocap_vicon/launch/: vicon.launch
mocap_vicon/src/: ViconDriver.cpp
mocap_vicon/src/vicon_sdk/: CMakeLists.txt
src/: KalmanFilter.cpp  MoCapDriverBase.cpp
src/qualisys/: QualisysDriver.cpp  qualisys.cpp
src/vicon/: ViconDriver.cpp  vicon.cpp
